second commit at home

--- a/index.html
+++ b/index.html
@@ -16,15 +16,17 @@
     </div>
 
     <nav>
-        <a>On campus</a>
-        <a>Online for companies</a>
-        <a>Sign in</a>
+        <a href="#">On campus</a>
+        <a href="#">Online for companies</a>
+        <a href="#">Sign in</a>
     </nav>
 
 </header>
 <!---------------------section 1 - Learn New everyday-------------------------------->
 <section id="learnNew">
+    <div id="bannerBox">
     <img src="./images/banner.jpg" alt="Banner">
+    </div>
 
     <div class="textBlock">
         <h1>Learn something <br>new everyday</h1>
@@ -46,12 +48,28 @@
             </div>
         </div>
         <div id="threeVertBlocks">
-            <div class="smallImgPlusText">
+            <div id="small_1" class="smallImgPlusText">
                 <img src="./images/information-orientation.jpg" alt="info-orientation">
                 <div class="infoText">
                     <h3>Orientation date</h3>
                     <p>Tue 10/11 and Wed 10/12: 8am-3pm</p>
-                    <p>Read more</p>
+                    <a href="#">Read more</a>
+                </div>
+            </div>
+            <div id="small_2" class="smallImgPlusText">
+                <img src="./images/information-campus.jpg" alt="info-campus">
+                <div class="infoText">
+                    <h3>Our campus</h3>
+                    <p>Find which campus is close by you</p>
+                    <a href="#">Read more</a>
+                </div>
+            </div>
+            <div id="small_3" class="smallImgPlusText">
+                <img src="./images/information-guest-lecture.jpg" alt="lecturers portrait">
+                <div class="infoText">
+                    <h3>Our guest lecture</h3>
+                    <p>Join a keynote with Oliver Sack about music in medical treatment</p>
+                    <a href="#">Read more</a>
                 </div>
             </div>
         </div>
