--- a/index.html
+++ b/index.html
@@ -76,7 +76,17 @@
 </section>
 <!---------------------section 3 - start Learning    -------------------------------->
 <section id="startLearning">
+    <h2>Start Learning</h2>
+    <div id="gridSixBox">
+            <div class="gridCell">1</div>
+        <div class="gridCell">2</div>
+        <div class="gridCell">3</div>
+        <div class="gridCell">4</div>
+        <div class="gridCell">5</div>
+        <div class="gridCell">6</div>
 
+    </div>
+    kuku
 </section>
 <!---------------------section 4 - Thesis Exhibit    -------------------------------->
 <section id="thesisExhibit">
