--- a/index.html
+++ b/index.html
@@ -78,18 +78,87 @@
 <section id="startLearning">
     <h2>Start Learning</h2>
     <div id="gridSixBox">
-            <div class="gridCell">1</div>
-        <div class="gridCell">2</div>
-        <div class="gridCell">3</div>
-        <div class="gridCell">4</div>
-        <div class="gridCell">5</div>
-        <div class="gridCell">6</div>
-
+        <div class="gridCell">
+            <img src="./images/course-software.jpg" alt="computers">
+            <div class="textBlock">
+                <h3>Software engineering</h3>
+                <p class="COURCES">COURSES</p>
+                <p>Web development, Mobile<br> development, iOT, APIs</p>
+            </div>
+        </div>
+        <div class="gridCell">
+            <img src="./images/course-computer-art.jpg" alt="computers">
+            <div class="textBlock">
+                <h3>Computer art</h3>
+                <p class="COURCES">COURSES</p>
+                <p>Imaging & Design, Web Design,<br> Motion Graphics & Visual Effects,<br> Computer Animation</p>
+            </div>
+        </div>
+        <div class="gridCell">
+            <img src="./images/course-design.jpg" alt="computers">
+            <div class="textBlock">
+                <h3>Design</h3>
+                <p class="COURCES">COURSES</p>
+                <p>User Experience Design, User<br> research, Visual Design</p>
+            </div>
+        </div>
+        <div class="gridCell">
+            <img src="./images/course-data.jpg" alt="computers">
+            <div class="textBlock">
+                <h3>Data</h3>
+                <p class="COURCES">COURSES</p>
+                <p>Data Science, Big Data, SQL, Data Visualization</p>
+            </div>
+        </div>
+        <div class="gridCell">
+            <img src="./images/course-business.jpg" alt="computers">
+            <div class="textBlock">
+                <h3>Business</h3>
+                <p class="COURCES">COURSES</p>
+                <p>Product development, Business<br> development, Startup</p>
+            </div>
+        </div>
+        <div class="gridCell">
+            <img src="./images/course-marketing.jpg" alt="computers">
+            <div class="textBlock">
+                <h3>Marketing</h3>
+                <p class="COURCES">COURSES</p>
+                <p>Analytics, Content Marketing,<br> Mobile Marketing</p>
+            </div>
+        </div>
     </div>
-    kuku
 </section>
 <!---------------------section 4 - Thesis Exhibit    -------------------------------->
 <section id="thesisExhibit">
+    <h2>Thesis Exhibit</h2>
+    <div id="mainContainer">
+        <div id="bigVideoPlusTextBlock">
+            <video id="videoFile" src="./videos/thesis.mp4" alt="readingGuy">VideoUnav</video>
+            <div class="infoText">
+                <h2>Reimagine urban</h2>
+                <p>"Curabitur ligula sapien, pulvinar a vestibulum quis, facilisis vel sapien.
+                    Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium,
+                    totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae
+                    vitae dicta sunt explicabo." </p>
+            </div>
+        </div>
+        <div id="twoVertBlocks">
+            <div id="small_4" class="smallImgPlusText">
+                <img src="./images/thesis-fisma.jpg" alt="info-orientation">
+                <div class="infoText">
+                    <h3>Fisma: Design and<br> Prototype</h3>
+                    <p>Designer showcase of new<br> prototype product</p>
+                </div>
+            </div>
+            <div id="small_5" class="smallImgPlusText">
+                <img src="./images/thesis-now-and-then.jpg" alt="info-campus">
+                <div class="infoText">
+                    <h3>Now and then</h3>
+                    <p>Research study about New York</p>
+                </div>
+            </div>
+        </div>
+    </div>
 
 </section>
 <!--------------------- footer -------------------------------->
