--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
 
     <nav id="mobileHeaderNav">
         <img src="./images/ic-logo.svg" alt="logoColmar">
-        <a><img src="./images/ic-on-campus.svg" alt="oncampus"></a>
-        <a><img src="./images/ic-online.svg" alt="online"></a>
-        <a><img src="./images/ic-login.svg" alt="login"></a>
+        <a href="#"><img src="./images/ic-on-campus.svg" alt="oncampus"></a>
+        <a href="#"><img src="./images/ic-online.svg" alt="online"></a>
+        <a href="#"><img src="./images/ic-login.svg" alt="login"></a>
     </nav>
 
 </header>
@@ -138,12 +138,12 @@
         </div>
     </div>
     <div id="flexSixBoxMobile">
-        <a><p>Software engineering</p></a>
-        <a> <p>Computer art</p></a>
-            <a><p>Design</p></a>
-                <a> <p>Data</p></a>
-                    <a> <p>Business</p></a>
-                        <a><p>Marketing</p></a>
+        <a href="#"><p>Software engineering</p></a>
+        <a href="#"> <p>Computer art</p></a>
+            <a href="#"><p>Design</p></a>
+                <a href="#"> <p>Data</p></a>
+                    <a href="#"> <p>Business</p></a>
+                        <a href="#"><p>Marketing</p></a>
     </div>
 </section>
 <!---------------------section 4 - Thesis Exhibit    -------------------------------->
